adjust sizing and fix headers spacing

--- a/styles.css
+++ b/styles.css
@@ -130,9 +130,11 @@ li img{
 
 .page-content{
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 3fr 1fr;
 }
-
+.left-side-header, .right-side-header{
+  margin-bottom: 20px;
+}
 .left-side-content{
   padding-left: 30px;
   padding-top: 40px;
@@ -146,7 +148,9 @@ li img{
 }
 
 .right-side-content{
-  
+
+  padding-right: 40px;
+  padding-top: 40px;
 }
 
 .card{
@@ -184,4 +188,23 @@ li img{
   width: 60px;
   height: 30px;
   border-radius: 5px;
+}
+
+.info-card{
+  height: 350px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 5px 5px rgb(214, 214, 214);
+}
+
+.info-title{
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.info-content{
+  
 }
